<resources>
    <string name="app_name">Fragment App</string>

    <!-- Contact List Screen -->
    <string name="contact_list_title">Список контактов</string>
    <string name="search_query_hint">Найти контакт</string>

    <!-- Contact Details Screen -->
    <string name="contact_details_title">Детали контакта</string>
    <string name="contact_details_c1_phone2">+79123456234</string>
    <string name="contact_details_c1_email1">email</string>
    <string name="contact_details_c1_email2">email2</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="turn_off_notifications">Turn off notifications</string>

    <!-- Contact Broadcast Receiver -->
    <string name="notification_channel_name">notification channel name</string>
    <string name="notification_text">Today birthday of %1$s</string>
    <string name="batman">batman</string>

    <!-- Contact Permission Dialog -->
    <string name="contactPermissionDialogTitle">Access to Contacts</string>
    <string name="contactPermissionDialogList">To download the contact list, you need to allow access to Contacts</string>
    <string name="contactPermissionDialogDetails">To download contact details , you need to allow access to Contacts</string>
    <string name="contactPermissionDialogButton">Grant access</string>
    <string name="noAccessGranted">No access granted!</string>
</resources>