<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kgbrussia.library.fragments.ContactDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarContactDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/contact_details_title" />

    <ProgressBar
        android:id="@+id/progress_bar_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <include
        android:id="@+id/contactCard"
        layout="@layout/item_contact_card"
        android:layout_width="0dp"
        android:layout_height="@dimen/contact_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarContactDetails" />

    <TextView
        android:id="@+id/textViewSecondPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/contact_text_view_padding"
        android:text="@string/contact_details_c1_phone2"
        android:textAlignment="gravity"
        android:textSize="@dimen/contact_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactCard" />

    <TextView
        android:id="@+id/textViewThirdPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/contact_text_view_padding"
        android:text=""
        android:textAlignment="gravity"
        android:textSize="@dimen/contact_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondPhoneNumber" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/contact_text_view_padding"
        android:text="@string/contact_details_c1_email1"
        android:textAlignment="gravity"
        android:textSize="@dimen/contact_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThirdPhoneNumber" />

    <TextView
        android:id="@+id/textViewSecondEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/contact_text_view_padding"
        android:text="@string/contact_details_c1_email2"
        android:textAlignment="gravity"
        android:textSize="@dimen/contact_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewThirdEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/contact_text_view_padding"
        android:text=""
        android:textAlignment="gravity"
        android:textSize="@dimen/contact_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecondEmail" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/contact_text_view_padding"
        android:text=""
        android:textAlignment="gravity"
        android:textSize="@dimen/contact_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThirdEmail" />

    <Button
        android:id="@+id/button_birthday_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>